[gd_scene load_steps=2 format=3 uid="uid://dw0x6jys7euaw"]

[ext_resource type="Script" path="res://underworld.gd" id="1_65wwq"]

[node name="Underworld" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65wwq")

[node name="Heaven" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeavenBackgroundPanel" type="ColorRect" parent="Heaven"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Back" type="Button" parent="Heaven/HeavenBackgroundPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to Tinder screen"

[node name="ScoreLabel" type="Label" parent="Heaven/HeavenBackgroundPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Heaven score is : 0"

[node name="AcceptHeavenQuest" type="Button" parent="Heaven/HeavenBackgroundPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2
text = "Accept heaven quest"

[node name="Hell" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HellBackgroundPanel" type="ColorRect" parent="Hell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="Back" type="Button" parent="Hell/HellBackgroundPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -15.5
offset_right = 87.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Back to Tinder screen"

[node name="ScoreLabel" type="Label" parent="Hell/HellBackgroundPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Hell score is : 0"

[node name="AcceptHellQuest" type="Button" parent="Hell/HellBackgroundPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Accept hell quest"

[node name="UnderworldSelector" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0235294, 0.239216)

[node name="HBoxContainer" type="HBoxContainer" parent="UnderworldSelector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -15.5
offset_right = 100.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="ToHellButton" type="Button" parent="UnderworldSelector/HBoxContainer"]
layout_mode = 2
text = "Go to Hell
"

[node name="ToHeavenButton" type="Button" parent="UnderworldSelector/HBoxContainer"]
layout_mode = 2
text = "Go to Heaven"

[connection signal="pressed" from="Heaven/HeavenBackgroundPanel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Heaven/HeavenBackgroundPanel/Back" to="Heaven" method="_on_button_pressed" flags=18]
[connection signal="toggled" from="Heaven/HeavenBackgroundPanel/AcceptHeavenQuest" to="." method="_on_accept_heaven_quest_toggled"]
[connection signal="pressed" from="Hell/HellBackgroundPanel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Hell/HellBackgroundPanel/Back" to="Hell" method="_on_back_pressed" flags=18]
[connection signal="toggled" from="Hell/HellBackgroundPanel/AcceptHellQuest" to="." method="_on_accept_hell_quest_toggled"]
[connection signal="pressed" from="UnderworldSelector/HBoxContainer/ToHellButton" to="." method="_on_to_hell_button_pressed"]
[connection signal="pressed" from="UnderworldSelector/HBoxContainer/ToHeavenButton" to="." method="_on_to_heaven_button_pressed"]
